# russian_multiplication

./: .travis.yml
src/: CMakeLists.txt  rmult.h  unit_tests.cpp
